# mobile-env

./: AI_USAGE.md  README.md  pyproject.toml  resources.md  run_eval.py
mobile_ui_env/: __init__.py  actions.py  dataset.py  env.py  rubric.py  state.py
tests/: test_actions.py  test_env.py  test_rewards.py
